# electricity-price-disparity-ch-de

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  walkthrough.ipynb
data/raw/: TEST1_Day-ahead Prices_2016.csv  TEST2_Day-ahead Prices_2016.csv  jao_data_api.py  jao_data_daily.py
docs/: main.tex
electricity_env/: pyvenv.cfg
notebooks/: 1_process_data.ipynb  2_analysis.ipynb  2_methodology.ipynb  3_results.ipynb
notebooks/_old/: jao_data_api.py  jao_data_api2.py  price_exploration.py
report/: beamer.tex  main.tex  references.bib
src/: config.py  utils.py
src/data/raw/: auction_data.csv
src/datafeed/: downstream.py  upstream.py
src/docs/: main.tex
