[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "electricity_price_disparity_ch_de"
version = "0.0.1"
description = "We are interested in analyzing the auction prices from the Joint Allocation Office (JAO) at the Swiss border, where electricity production and supply companies purchase capacity for importing and exporting electricity. Specifically, we aim to investigate whether the auction prices at the border between Switzerland and Germany correspond to the price differences in the respective day-ahead electricity markets. We plan to use the day-ahead prices from the entso-e transparency platform and auction price data via the JAO API."
authors = [
  { name = "Nicolas Greber, Vansh Khanna, Massimo Antonio Nardo" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=In a second step, we plan to explore whether the gap between auction prices and day-ahead price differences widens as the share of photovoltaic electricity generation increases."

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["electricity_price_disparity_ch_de"]
force_sort_within_sections = true
